--- a/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
@@ -7,7 +7,8 @@
     "apiBase": "http://localhost:5200/api",
     "webBase": "http://localhost:5106",
     "ordersMicroservice": "http://gateway:8080/orders/",
-    "catalogMicroservice": "http://gateway:8080/catalog/"
+    "catalogMicroservice": "http://gateway:8080/catalog/",
+    "basketMicroservice": "http://basket-api:5004/api/basket"
   },
   "Logging": {
     "LogLevel": {
