implement complete. reserve, confirm, restock and cancel reserve works. + automatic admin ui update using rabbitmq events with signalr  sexy shit

--- a/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
+++ b/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       dockerfile: src/Web/Dockerfile
     depends_on:
       - sqlserver
+      - storage_rabbitmq
     networks:
       - eshop-on-web-net
     environment:
