fixed branch with main

--- a/MicroServices/CatalogMicroService/Dockerfile
+++ b/MicroServices/CatalogMicroService/Dockerfile
@@ -12,8 +12,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy app
 COPY . .
 
-# Make wait script executable
-RUN chmod +x wait-for-postgres.sh
-
-# Default command (docker-compose can override)
-CMD ["sh", "-c", "./wait-for-postgres.sh"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
