--- a/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
+++ b/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
@@ -9,8 +9,11 @@ services:
       context: .
       dockerfile: src/Web/Dockerfile
     depends_on:
-      - sqlserver
-      - storage_rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      sqlserver:
+        condition: service_healthy
+
     networks:
       - eshop-on-web-net
     environment:
@@ -34,6 +37,12 @@ services:
       - eshop-on-web-net
     volumes:
       - sqlserver_data:/var/lib/sqlserver/data
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P @someThingComplicated1234 -Q 'SELECT 1' || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
 volumes:
   sqlserver_data:
