--- a/MicroServices/storage-micro-service/docker-compose.yml
+++ b/MicroServices/storage-micro-service/docker-compose.yml
@@ -1,34 +1,42 @@
 networks:
   eshop-on-web-net:
     external: true
+    
 services:
-  storage_app:
+  storage-app:
     build: .
     depends_on:
-      - storage_db
+      storage-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     ports:
       - "3000:3000"
     environment:
-      DATABASE_HOST: storage_db
+      DATABASE_HOST: storage-db
       DATABASE_PORT: 5432
       DATABASE_USER: postgres
       DATABASE_PASSWORD: postgres
-      DATABASE_NAME: storage-db
-      RABBITMQ_URI: amqp://guest:guest@storage_rabbitmq:5672
+      DATABASE_NAME: storagedb
+      RABBITMQ_URI: amqp://guest:guest@rabbitmq:5672
     networks:
       - eshop-on-web-net
 
-  storage_db:
+  storage-db:
     image: postgres:16
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: storage-db
+      POSTGRES_DB: storagedb
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - eshop-on-web-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 5
+      timeout: 5s
 
 volumes:
   postgres_data:
-  pgadmin_data:
