--- a/docker-compose-adminpages.yml
+++ b/docker-compose-adminpages.yml
@@ -22,3 +22,12 @@ services:
       - "15672:15672"
     networks:
       - eshop-on-web-net
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "check_running"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+      
+volumes:
+  pgadmin_data:
