--- a/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
@@ -17,7 +17,7 @@
     }
   },
   "RabbitMQ": {
-    "HostName": "storage_rabbitmq",
+    "HostName": "rabbitmq",
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest"
