--- a/MicroServices/CatalogMicroService/requirements.txt
+++ b/MicroServices/CatalogMicroService/requirements.txt
@@ -5,3 +5,4 @@ python-dotenv # For environment variable management
 sqlmodel # ORM
 asyncpg # PostgreSQL driver
 alembic # For database migrations
+pytest
