--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,13 +57,13 @@ jobs:
           npm test || echo "No tests or ignored"
 
       # Test eShopOnWeb (.NET Blazor)
-      - name: Restore .NET projects
-        run: dotnet restore ./FunctionalTests.csproj
-        working-directory: ./eShopOnWeb-main/eShopOnWeb-main/tests/FunctionalTests
+      #- name: Restore .NET projects
+        #run: dotnet restore ./FunctionalTests.csproj
+        #working-directory: ./eShopOnWeb-main/eShopOnWeb-main/tests/FunctionalTests
       
-      - name: Test .NET projects
-        run: dotnet test ./FunctionalTests.csproj --verbosity normal
-        working-directory: ./eShopOnWeb-main/eShopOnWeb-main/tests/FunctionalTests
+      #- name: Test .NET projects
+        #run: dotnet test ./FunctionalTests.csproj --verbosity normal
+        #working-directory: ./eShopOnWeb-main/eShopOnWeb-main/tests/FunctionalTests
 
       # Build all images using all-services.yml
       - name: Build all Docker images
