--- a/all-services.yml
+++ b/all-services.yml
@@ -1,4 +1,5 @@
 include:
+  - logging-stack.compose.yml
   - docker-compose-adminpages.yml
   - eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
   - MicroServices/OrderMicroService/order-service/docker-compose.yml
