--- a/MicroServices/CatalogMicroService/docker-compose.yml
+++ b/MicroServices/CatalogMicroService/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: catalogpass
       POSTGRES_DB: catalogdb
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U cataloguser -d catalogdb"]
       interval: 5s
       retries: 5
       timeout: 5s
