--- a/all-services.yml
+++ b/all-services.yml
@@ -1,5 +1,6 @@
 include:
   - docker-compose-adminpages.yml
+  - Monitoring/docker-compose-grafana.yml
   - eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
   - MicroServices/OrderMicroService/order-service/docker-compose.yml
   - MicroServices/CatalogMicroService/docker-compose.yml
