added rabbitmq confirm functionality to order service.

--- a/MicroServices/OrderMicroService/order-service/docker-compose.yml
+++ b/MicroServices/OrderMicroService/order-service/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     depends_on:
       order-db:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     networks:
       eshop-on-web-net:
         aliases:
