--- a/MicroServices/storage-micro-service/docker-compose.yml
+++ b/MicroServices/storage-micro-service/docker-compose.yml
@@ -1,7 +1,3 @@
-networks:
-  eshop-on-web-net:
-    external: true
-    
 services:
   storage-app:
     build: .
@@ -10,6 +6,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      certgen:
+        condition: service_completed_successfully
     ports:
       - "3000:3000"
     environment:
@@ -37,6 +35,13 @@ services:
       interval: 5s
       retries: 5
       timeout: 5s
+    depends_on:
+      certgen:
+        condition: service_completed_successfully
+
+networks:
+  eshop-on-web-net:
+    external: true
 
 volumes:
   postgres_data:
