--- a/docker-compose-adminPages.yml
+++ b/docker-compose-adminPages.yml
@@ -8,6 +8,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      certgen:
+        condition: service_completed_successfully
     ports:
       - "8080:80"
     volumes:
@@ -20,6 +23,9 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    depends_on:
+      certgen:
+        condition: service_completed_successfully
     networks:
       - eshop-on-web-net
     healthcheck:
