--- a/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
+++ b/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
@@ -1,7 +1,3 @@
-networks:
-  eshop-on-web-net:
-    external: true
-
 services:
   eshopwebmvc:
     image: ${DOCKER_REGISTRY-}eshopwebmvc
@@ -13,7 +9,8 @@ services:
         condition: service_healthy
       sqlserver:
         condition: service_healthy
-
+      certgen:
+        condition: service_completed_successfully
     networks:
       - eshop-on-web-net
     environment:
@@ -33,6 +30,9 @@ services:
     environment:
       - SA_PASSWORD=@someThingComplicated1234
       - ACCEPT_EULA=Y
+    depends_on:
+      certgen:
+        condition: service_completed_successfully
     networks:
       - eshop-on-web-net
     volumes:
@@ -43,6 +43,11 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+networks:
+  eshop-on-web-net:
+    external: true
+
 
 volumes:
   sqlserver_data:
