--- a/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/wwwroot/appsettings.Docker.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/wwwroot/appsettings.Docker.json
@@ -2,6 +2,6 @@
   "baseUrls": {
     "apiBase": "http://localhost:5200/api",
     "webBase": "http://localhost:5106",
-    "catalogMicroservice": "http://localhost:8000"
+    "catalogMicroservice": "http://gateway:8080/catalog/"
   }
 }
