--- a/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Development.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Development.json
@@ -2,7 +2,8 @@
   "baseUrls": {
     "apiBase": "https://localhost:5099/api",
     "webBase": "https://localhost:5001",
-    "catalogMicroservice": "http://localhost:8000"
+    "catalogMicroservice": "http://localhost:8090/catalog/",
+    "ordersMicroservice": "http://localhost:8090/orders/"
   },
   "Logging": {
     "LogLevel": {
