--- a/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.json
@@ -2,8 +2,8 @@
   "baseUrls": {
     "apiBase": "https://localhost:5099/api",
     "webBase": "http://localhost:5106",
-    "catalogMicroservice": "http://localhost:8000",
-    "ordersMicroservice": "http://localhost:8001",
+    "catalogMicroservice": "http://localhost:8090/catalog/",
+    "ordersMicroservice": "http://localhost:8090/orders/",
     "basketMicroservice": "http://localhost:5004/api/basket"
   },
   "ConnectionStrings": {
