--- a/MicroServices/ApiGatewayMicroService/dockerfile
+++ b/MicroServices/ApiGatewayMicroService/dockerfile
@@ -1,15 +1,14 @@
-# Use Go image
-FROM golang:1.21-alpine AS builder
+# Use Go 1.25.4 alpine image
+FROM golang:1.25.4-alpine AS builder
 
 WORKDIR /app
 
-# Copy the source code
-COPY ApiGateway.go .
+COPY go.mod go.sum ./
+RUN go mod download
 
-# Build the binary
+COPY ApiGateway.go . 
 RUN go build -o api-gateway ApiGateway.go
 
-# Minimal runtime image
 FROM alpine:latest
 
 WORKDIR /app
