--- a/eShopOnWeb-main/eShopOnWeb-main/src/Infrastructure/Infrastructure.csproj
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Infrastructure/Infrastructure.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+		<PackageReference Include="Microsoft.Extensions.Http" />
 		<PackageReference Include="RabbitMQ.Client" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" />
 	</ItemGroup>
