Making the jwt token to be created in runtime.
Fixed danish logs

--- a/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
+++ b/eShopOnWeb-main/eShopOnWeb-main/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ~/.aspnet/https:/root/.aspnet/https:ro
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
       - ./keys:/keys
+      - dev-secrets:/secrets:ro
 
   sqlserver:
     image: mcr.microsoft.com/azure-sql-edge
