--- a/MicroServices/storage-micro-service/package.json
+++ b/MicroServices/storage-micro-service/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "amqplib": "^0.10.9",
     "class-transformer": "^0.5.1",
