--- a/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/Web/appsettings.Docker.json
@@ -12,9 +12,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "System": "Warning",
-      "Microsoft": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "RabbitMQ": {
