final changes and cleanup + error handling and logging

--- a/MicroServices/CatalogMicroService/requirements.txt
+++ b/MicroServices/CatalogMicroService/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard] # ASGI server
 pydantic # For data validation and settings management
 python-dotenv # For environment variable management
 sqlmodel # ORM
+SQLAlchemy # Explicit SQL toolkit dependency for linting
 asyncpg # PostgreSQL driver
 alembic # For database migrations
 pytest 
