--- a/Monitoring/docker-compose-grafana.yml
+++ b/Monitoring/docker-compose-grafana.yml
@@ -20,6 +20,8 @@ services:
     image: grafana/grafana:11.2.0
     ports:
       - "3001:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
@@ -27,3 +29,4 @@ services:
 
 volumes:
   loki-data:
+  grafana-data:
